--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+bump = []
+default = []
+
 [dependencies]
+spin = "0.9.8"
