--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-bump = []
 default = []
 
 [dependencies]
 spin = "0.9.8"
+
+[[bench]]
+name = "main"
+harness = false
