fix(ci): use `nightly` toolchain

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ parameters:
   toolchain:
     description: defines the toolchain to be used, can be "nightly", "beta" or "stable"
     type: string
-    default: "stable"
+    default: "nightly"
 
 commands:
 
